--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 0;
             font-family: 'Courier New', Courier, monospace;
             color: #FF0000;
-            background: #000000 url('https://www.example.com/immagine-hacker.jpg') no-repeat center center fixed;
+            background: #000000;
             background-size: cover;
             overflow: hidden;
             position: relative;
